src/components/Header/index.module.scss
.header {
    display: flex;
    justify-content: space-between;
    align-items: center;
    height: var(--header-height);
    border-bottom: 1px solid var(--color-tone-4);
    color: var(--color-tone-1);
    user-select: none;
    transition: border-bottom-color .25s;
    padding-inline: var(--header-padding-x);

    .title {
        flex: 1;
        pointer-events: none;
        margin-inline: 10px;

        span {
            background-image: var(--title-background);
            background-clip: text;
            font-family: nyt-karnakcondensed;
            font-size: 28px;
            font-weight: 700;
            vertical-align: middle;
            white-space: nowrap;
            letter-spacing: 0.01em;
            transition: background-image .25s;
            -webkit-text-fill-color: transparent;

            sub {
                display: inline-block;
                font-size: 16px;
                vertical-align: baseline;

                &::first-letter {
                    font-size: 24px;
                }
            }
        }
    }

    .header-left {
        display: flex;
        align-items: center;
        gap: 6px;

        img {
            width: 28px;
        }
    }

    .header-right {
        display: flex;
        justify-content: flex-end;
        align-items: center;
        gap: 4px;

        svg,
        .hard-mode {
            cursor: pointer;
            transition: color .25s;
        }

        .hard-mode {
            width: 21px;
            font-size: 28px;
            text-align: center;
            vertical-align: middle;
        }

        .reset {
            visibility: hidden;
            opacity: 0;
            transition: opacity .25s, visibility 0s .5s;

            &.show {
                visibility: visible;
                opacity: 1;
                transition: opacity .5s, visibility 0s;
            }
        }
    }

    @media screen and (min-width: 768px) {
        .header-left,
        .header-right {
            width: 120px;
        }

        .title {
            text-align: center;

            span {
                font-size: 32px;

                sub {
                    font-size: 18px;

                    &::first-letter {
                        font-size: 28px;
                    }
                }
            }
        }
    }
}

